Add button to remove MenuItems

--- a/src/components/Pages/Craft/MenuItem.css
+++ b/src/components/Pages/Craft/MenuItem.css
@@ -4,6 +4,10 @@
     padding: 2% 6% 2% 4%;
 }
 
+.menu-item button {
+    margin-right: 1vw;
+}
+
 .menu-item  p {
     text-transform: capitalize;
 }
