Convert CraftPage.Recipes to Tailwind

--- a/src/components/Pages/Craft/Menu.css
+++ b/src/components/Pages/Craft/Menu.css
@@ -53,3 +53,11 @@
     width: auto;
     height: auto;
   }
+
+  /* .info-button {
+    border-color: #007BFF;
+    background-color: #007BFF;
+    margin: 0;
+    margin-left: 16px;
+    padding: auto 1px;
+  } */
