Add brown colors to theme

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-    cursor: url('./static/image/Cursor.png'), auto;
+    cursor: url('./static/image/Cursor.png'), auto !important;
 }
 
 .footer {
