Prelaunch: Craft Page (#1)
* Add dynamic colors to recipe cards

- update ETL to change json keys to be lowercase
- add NaN support to ETL by forcing "NaN" string
- create diyrecipe-COLOR classes to correspond to colors.json

* Add button to remove MenuItems

* Remove potential duplicates in Nookipedia API results

* Correct dotenv for ETL installation

* Correct base-filtering logic and add 'exact match' filter flag

* Install (NOT implement) SimpleBar

* Tailwind: Start Navbar

* Complete Header Tailwind conversion

* CraftPage: Mobile temp unavailable complete

* Convert CraftPage.Recipes to Tailwind

* Add HD breakpoint for navbar

* Correct row column spacing issue on filter

* Add brown colors to theme

* hard set width of recipes

* convert CraftPage.Menu to Tailwind

* Add loading animation while fetching API data

* add Tooltip to CraftPage

* Disable PLAN for launch

* Add ItemFocus view

* Add fishing as source of DIY

* correct darkest brown to be yellow instead of red

* add simplebar to recipes -- unstyled & not overloading page bar

* Finish SimpleBar integration

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 * {
-    cursor: url('./static/image/Cursor.png'), auto;
+    cursor: url('./static/image/Cursor.png'), auto !important;
 }
 
-.container {
-    padding: 10px 0 0
+* input::-webkit-outer-spin-button,
+* input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .footer {
@@ -12,17 +14,6 @@
     margin: 0;
     left: 0;
     background: transparent;
-}
-
-h1, h2, h3, h4, h5, h6, p, label {
-    font-family: "Nunito", sans-serif;
-    color: #855E2D;
-}
-h1, h2, h3 {
-    font-weight: 800;
-}
-p {
-    font-weight: 600;
 }
 
 a {
